[package]
name = "basic-shellcode-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "z"
lto = true

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
]